@@ -1,5 +1,6 @@
 # This code must not cause non-stdlib imports to support self-bootstrapping.
 
+
 class UpdateNeeded(Exception):
     """A component requires an update."""
     pass
