@@ -1,4 +1,4 @@
-from batou import Component
+from batou.component import Component
 
 
 class ZEO(Component):
