@@ -1,4 +1,4 @@
-from batou import Component
+from batou.component import Component
 from batou.lib.file import File
 
 
